# docupipe-manager

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-23-project-task-restructure.md  (+8 more)
docupipe_manager/: _path_patch.py  config.py  crypto.py  db.py  deps.py  main.py
docupipe_manager/api/: auth.py  credentials.py  cron.py  env_vars.py  members.py  pages.py  projects.py  runs.py  schedules.py  stats.py  tasks.py
docupipe_manager/auth/: dependencies.py  oauth_state.py  project_access.py  session.py
docupipe_manager/migrations/: env.py
docupipe_manager/models/: __init__.py  base.py  docupipe_project.py  dws_credential.py  job.py  pipeline_run.py  project.py  project_env_var.py  project_member.py  task.py
docupipe_manager/platform/: client.py  config.py
docupipe_manager/services/: credential_service.py  dws_env.py  runner_service.py  scheduler_service.py
docupipe_manager/templates/: base.html
scripts/: register-docupipe-client.sql
tests/: conftest.py
tests/api/: test_auth.py  test_credentials.py  test_cron.py  test_env_vars.py  test_members.py  test_pages_schedules.py  test_projects.py  test_runs.py  test_schedules.py  test_tasks.py  test_xss_fix.py
tests/services/: test_credential_service.py  test_dws_env.py  test_dws_isolation_integration.py  test_platform_client.py  test_runner_service.py  test_scheduler_service.py
tests/unit/: test_crypto.py  test_models.py  test_pipeline_run_model.py  test_project_access.py  test_user_cache.py
(+34 files in other folders)
